Fix deps for virt-install

--- a/virtainer-fwd/Dockerfile
+++ b/virtainer-fwd/Dockerfile
@@ -1,7 +1,7 @@
-FROM alpine
+FROM alpine:3.9
 
 RUN apk update &&\
-	apk add --no-cache cdrkit alpine-conf qemu-system-x86_64 libvirt libvirt-daemon dbus polkit qemu-img openrc virt-install xz openssh bash &&\
+	apk add --no-cache cdrkit alpine-conf qemu-system-x86_64 libvirt libvirt-daemon dbus polkit qemu-img openrc virt-install xz openssh bash py-libxml2 py-libvirt &&\
 	rc-update add libvirtd &&\
 	rc-update add dbus
 
